<resources>
    <string name="app_name">Cipher</string>
    <string name="menu_start_game">Start game</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="menu_settings">Settings</string>
    <string name="login_btn">Log in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in_menu">Log in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="submit">Submit</string>
    <string name="game_score">Score: </string>
    <string name="settings_sound">Sound</string>

    <string name="game_over">The game is over. Your score: </string>
    <string name="turn_off_sound">Turn off sound</string>
    <string name="turn_on_sound">Turn on sound</string>


    <string name="scoreboard_nickname">Nickname</string>
    <string name="scoreboard_place">#</string>
    <string name="scoreboard_score">Score</string>
    <string name="button_prev"><![CDATA[<]]></string>
    <string name="button_next"><![CDATA[>]]></string>

</resources>
