<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <TextView
            android:id="@+id/btn_start_game"
            style="@style/MenuFont"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:text="@string/menu_start_game" />

        <TextView
            android:id="@+id/btn_scoreboard"
            style="@style/MenuFont"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:text="@string/menu_scoreboard" />

        <TextView
            android:id="@+id/btn_settings"
            style="@style/MenuFont"
            android:text="@string/menu_settings" />

    </LinearLayout>

</FrameLayout>