<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/login_margin"
        android:orientation="vertical"
        android:padding="@dimen/login_padding">


        <TextView
            style="@style/TitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_margin"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/login_margin"
            android:layout_marginBottom="@dimen/login_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_text_edit_size"
                android:layout_marginBottom="@dimen/login_margin"
                android:background="@drawable/edit_text"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_text_edit_size"
                android:layout_marginBottom="@dimen/login_margin"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/login_text_edit_size"
                android:layout_gravity="center"
                android:text="@string/login_btn"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>